# volt

./: AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
docs/: spec.md
src/: app.rs  config.rs  editor.rs  main.rs  settings.rs  ui.rs
